[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-content-prek-actions"
version = "0.1.0"
requires-python = ">=3.11"
description = "Pre-commit hooks for Ansible collection repositories"
license = {text = "Apache-2.0"}

[project.scripts]
run-ansible-lint = "hooks.ansible_lint_hook:main"
validate-changelog = "hooks.validate_changelog:cli"
run-galaxy-importer = "hooks.galaxy_importer_hook:main"
run-tox-sanity = "hooks.tox_runner:main_sanity"
run-tox-unit = "hooks.tox_runner:main_unit"
run-tox-integration = "hooks.tox_runner:main_integration"
ansible-ee-build = "hooks.ee_build:main"

[project.optional-dependencies]
# Pinned versions that Dependabot tracks. When Dependabot bumps a version here,
# the sync script (scripts/sync_hooks.py) updates .pre-commit-hooks.yaml and
# README.md to match.
#
# galaxy-importer is in its own group because it caps ansible-lint to an older
# version that conflicts with ansible-dev-tools. The galaxy-importer hook gets
# its own isolated pre-commit venv (no ansible-dev-tools).
hooks = [
    "ansible-dev-tools==26.4.5",
    "antsibull-changelog==0.35.0",
]
galaxy-importer = [
    "galaxy-importer==0.4.38",
]

[tool.setuptools.packages.find]
include = ["hooks*"]
